folder manage admin deshboard

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -56,3 +56,22 @@ body {
     background-color:#1e3a8a !important;
     border-color: #1e3a8a !important;
 }
+.bg-red-50 {
+    --tw-bg-opacity: 1;
+    background-color: rgb(254 242 242 / var(--tw-bg-opacity, 1));
+}
+
+.border-red-200 {
+    --tw-border-opacity: 1;
+    border-color: rgb(254 202 202 / var(--tw-border-opacity, 1));
+}
+
+.bg-yellow-50 {
+    --tw-bg-opacity: 1;
+    background-color: rgb(254 252 232 / var(--tw-bg-opacity, 1));
+}
+
+.border-yellow-200 {
+    --tw-border-opacity: 1;
+    border-color: rgb(254 240 138 / var(--tw-border-opacity, 1));
+}
